<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jls6595.assignment2.MainActivity">

    <TextView
        android:id="@+id/header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:ems="10"
        android:text="@string/header_email"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="213sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="8sp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_email" />

    <EditText
        android:id="@+id/email_subject"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/email_subject"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <TextView
        android:id="@+id/header_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="@string/header_complexity"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="@id/header_email"
        app:layout_constraintTop_toBottomOf="@+id/email_subject" />

    <TextView
        android:id="@+id/data_structure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/data_structure"
        app:layout_constraintStart_toStartOf="@id/header_complexity"
        app:layout_constraintTop_toBottomOf="@+id/header_complexity" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:entries="@array/ds_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_structure" />

    <TextView
        android:id="@+id/operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/operations"
        app:layout_constraintStart_toStartOf="@id/data_structure"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <CheckBox
        android:id="@+id/getMin_check"
        android:onClick="operationsChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getMin_check"
        app:layout_constraintEnd_toStartOf="@+id/insert_check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operations" />

    <CheckBox
        android:id="@+id/insert_check"
        android:onClick="operationsChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_check"
        app:layout_constraintEnd_toStartOf="@+id/search_check"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/getMin_check"
        app:layout_constraintTop_toBottomOf="@+id/operations" />

    <CheckBox
        android:id="@+id/search_check"
        android:onClick="operationsChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/insert_check"
        app:layout_constraintTop_toBottomOf="@+id/operations" />

    <TextView
        android:id="@+id/worst_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running_time"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/getMin_check"
        app:layout_constraintStart_toStartOf="@+id/operations" />

    <RadioGroup
        android:id="@+id/worstCase_radioGroup"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/avgCase_radio"
        android:orientation="horizontal"
        android:paddingEnd="0dp"
        android:paddingStart="0sp"
        app:layout_constraintEnd_toEndOf="@id/search_check"
        app:layout_constraintStart_toStartOf="@id/getMin_check"
        app:layout_constraintTop_toBottomOf="@id/worst_case">

        <RadioButton
            android:id="@+id/avgCase_radio"
            android:onClick="runningTimeSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avgCase_radio"
            app:layout_constraintStart_toStartOf="@id/getMin_check"
            app:layout_constraintTop_toBottomOf="@id/worst_case" />

        <RadioButton
            android:id="@+id/worstCase_radio"
            android:onClick="runningTimeSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/worstCase_radio"
            app:layout_constraintEnd_toEndOf="@id/search_check"
            app:layout_constraintTop_toBottomOf="@id/worst_case" />

    </RadioGroup>

    <TextView
        android:id="@+id/header_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/header_result"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="@id/header_email"
        app:layout_constraintTop_toBottomOf="@id/worstCase_radioGroup" />

    <TextView
        android:id="@+id/to_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_result"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/data_structure"
        app:layout_constraintTop_toBottomOf="@id/header_result" />

    <TextView
        android:id="@+id/subject_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_result"
        app:layout_constraintStart_toStartOf="@id/data_structure"
        app:layout_constraintTop_toBottomOf="@id/to_result" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/email_fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/email_body"
        android:layout_width="267dp"
        android:layout_height="112dp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="0sp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/subject_result"
        app:layout_constraintTop_toBottomOf="@+id/subject_result" />

</android.support.constraint.ConstraintLayout>
